--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "varTestnlme"]
+	path = varTestnlme
+	url = https://github.com/baeyc/vartestnlme
+	shallow = true
+	registered = true
